Fix ML NPE